--- a/test/test.html
+++ b/test/test.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
-<meta charset="utf-8">
-<title>QUnit</title>
-<link rel="stylesheet" href="https://code.jquery.com/qunit/qunit-2.21.0.css">
+<head>
+  <meta charset="utf-8">
+  <title>QUnit Tests</title>
+  <link rel="stylesheet" href="https://code.jquery.com/qunit/qunit-2.21.0.css">
+</head>
 <body>
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
