Added Soft Background Music

--- a/Main.html
+++ b/Main.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Background Music -->
+    <iframe src="music.html" id="music-player" style="display: none;" aria-hidden="true"></iframe>
+
     <!-- Header -->
     <header class="header">
         <div class="logo">
