--- a/RecipeCalculation.html
+++ b/RecipeCalculation.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="calculation-page">
+    <!-- Background Music -->
+    <iframe src="music.html" id="music-player" style="display: none;" aria-hidden="true"></iframe>
+
     <header class="header">
         <div class="logo">
             Factorio Recipe Calculator
